2005-09-12  Tom Tromey  <tromey@redhat.com>

	* main.cc (argument_parser::help_options): Only print -j help if
	threads available.
	(argument_parser::parse_args): Throw better error if threads not
	available.
	* thread/thread.hh (concurrence::available): New function.

2005-09-12  Tom Tromey  <tromey@redhat.com>

	* bytecode/attribute.cc (exceptions_attribute): Unwrap the
	forwarding type.
	(emit): Likewise.

2005-09-11  Tom Tromey  <tromey@redhat.com>

	* factory.cc (find_source_file): Updated.
	(find_derived_file): Likewise.
	(process_zip_entry): Updated.
	* reader/fdreader.cc (read_all): Call note_read.
	* reader/fdreader.hh (fd_reader): Added filename argument.
	* reader/zereader.cc (read_all): Call note_read.
	* reader/zereader.hh (zip_entry_reader): Added filename argument.
	* reader/reader.hh (reader::note_read): New method.
	(reader): Added argument.
	* compiler.hh (compiler::all_files_read): New field.
	(compiler::note_file_read): New method.
	(compiler::get_all_files_read): Likewise.

2005-09-11  Tom Tromey  <tromey@redhat.com>

	* bytecode/attribute.cc (exceptions_attribute): Updated.
	(emit): Likewise.
	* bytecode/attribute.hh (exceptions_attribute::excs): Changed
	type.
	(exceptions_attribute): Updated.
	* bytecode/classwriter.cc (write): Use get_throws, not
	get_throws_as_set.

2005-09-11  Tom Tromey  <tromey@redhat.com>

	* source/parse.cc (enum_body): Push a new class scope when parsing
	body.

2005-09-11  Tom Tromey  <tromey@redhat.com>

	* model/forenhanced.hh (model_for_enhanced::elt_type): New field.
	(model_for_enhanced): Initialize it.
	(model_for_enhanced::get_element_type): New method.
	* bytecode/generate.hh
	(bytecode_generator::emit_cast_maybe_boxing): Declare.
	* bytecode/generate.cc (emit_cast_maybe_boxing): New method.
	(visit_cast): Use it.
	(visit_for_enhanced): Likewise.
	* model/forenhanced.cc (resolve): Removed error for primitive
	type; do assignment conversion in both cases.
	(find_method): New function.
